@@ -167,8 +167,15 @@
     <echo message="Jar: ${ant.project.name}"/>
     <jar
       jarfile="${build.dir}/hive_${ant.project.name}.jar"
-      basedir="${build.classes}"
-    />
+      basedir="${build.classes}">
+      <manifest>
+        <!-- Not putting these in their own manifest section, since that inserts
+        a new-line, which breaks the reading of the attributes. -->
+        <attribute name="Implementation-Title" value="Hive"/>
+        <attribute name="Implementation-Version" value="${version}"/>
+        <attribute name="Implementation-Vendor" value="Apache"/>
+      </manifest>
+    </jar>
   </target>
 
   <!-- target to compile tests -->
@@ -271,6 +278,8 @@
   <!-- target to run the tests -->
   <target name="test"
   	depends="test-conditions,gen-test,compile-test,test-jar,test-init">
+    <!--<property name="testcp" refid="test.classpath"/>-->
+    <!--<echo message="test.classpath: ${testcp}"/>-->
     <junit showoutput="${test.output}" printsummary="yes" haltonfailure="no"
            fork="yes" maxmemory="512m" dir="${basedir}" timeout="${test.timeout}"
            errorProperty="tests.failed" failureProperty="tests.failed" filtertrace="off">
