@@ -25,6 +25,11 @@
   <property file="${user.home}/build.properties" />
   <property file="${basedir}/build.properties" />
 
+  <!-- This is the version added to the manifest, which must be manually rev'ed
+  whenever a branch version is created. The non-numberic/dot characters are
+  silently dropped from the Implementation-Version when added to the manifest. -->
+  <property name="version" value="0.4.0-dev"/>
+
   <property name="target.dir" location="${build.dir.hive}/dist"/>
   <property name="target.lib.dir" location="${target.dir}/lib"/>
   <property name="target.conf.dir" location="${target.dir}/conf"/>
